--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,11 @@
               "node_modules/font-awesome/css/font-awesome.css",
               "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/ace-builds/src-min/ace.js",
+              "node_modules/ace-builds/src-min/mode-typescript.js",
+              "node_modules/ace-builds/src-min-noconflict/theme-clouds_midnight.js"
+            ]
           },
           "configurations": {
             "production": {
