--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "@angular/platform-browser-dynamic": "^6.0.2",
     "@angular/router": "^6.0.2",
     "@ng-bootstrap/ng-bootstrap": "^2.0.0",
+    "ace-builds": "^1.3.3",
     "angular-font-awesome": "^3.1.2",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "monaco-editor": "^0.13.1",
+    "ng2-ace-editor": "^0.3.7",
     "ngx-monaco": "^0.8.0",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
