--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "vynil-ui",
-  "version": "0.0.0",
+  "version": "0.0.2",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "lib": "ng-packagr",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "update": "ng update --all"
   },
-  "private": true,
-  "dependencies": {
+  "peerDependencies": {
     "@angular/animations": "^6.0.2",
     "@angular/cdk": "^6.0.2",
     "@angular/common": "^6.0.2",
@@ -24,31 +25,23 @@
     "@angular/router": "^6.0.2",
     "@ng-bootstrap/ng-bootstrap": "^2.0.0",
     "ace-builds": "^1.3.3",
-    "angular-font-awesome": "^3.1.2",
     "core-js": "^2.5.4",
-    "font-awesome": "^4.7.0",
-    "monaco-editor": "^0.13.1",
-    "ng2-ace-editor": "^0.3.7",
-    "ngx-monaco": "^0.8.0",
     "rxjs": "^6.0.0",
-    "zone.js": "^0.8.26"
+    "zone.js": "^0.8.26",
+    "angular-font-awesome": "^3.1.2",
+    "font-awesome": "^4.7.0",
+    "ng2-ace-editor": "^0.3.7",
+    "monaco-editor": "^0.13.1",
+    "ngx-monaco": "^0.8.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.3",
     "@angular/cli": "~6.0.3",
     "@angular/compiler-cli": "^6.0.2",
     "@angular/language-service": "^6.0.2",
-    "@types/jasmine": "~2.8.6",
-    "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.2.1",
-    "jasmine-core": "~2.99.1",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~1.7.1",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~1.4.2",
-    "karma-jasmine": "~1.1.1",
-    "karma-jasmine-html-reporter": "^0.2.2",
+    "ng-packagr": "^4.4.5",
     "node-sass": "^4.9.0",
     "protractor": "~5.3.0",
     "raw-loader": "^0.5.1",
